kojiclient-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kojiclient
  labels:
    app: koji
