09-kojibuilder-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: koji-builder
  labels:
    app: koji
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koji
  template:
    metadata:
      labels:
        app: koji
    spec:
      hostAliases:
      - ip: 10.40.0.50
        hostnames:
        - gitcentos.mvista.com
      - ip: 10.40.5.50
        hostnames:
        - centos7mirror.mvista.com
      - ip: 10.40.4.102
        hostnames:
        - centos7collective.mvista.com
      containers:
        - name: koji-builder
          image: jpuhlman/koji-builder
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
          volumeMounts:
          - mountPath: /var/lib/mock
            name: koji-mock
          - mountPath: /srv
            name: koji-srv
      volumes:
      - name: koji-mock
        hostPath:
           path: /koji/mock
           type: Directory
      - name: koji-srv
        hostPath:
           path: /srv
           type: Directory
      restartPolicy: Always
