11-jenkins-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: koji-jenkins
  labels:
    app: koji
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koji
  template:
    metadata:
      labels:
        app: koji
    spec:
      hostAliases:
      - ip: 10.40.0.50
        hostnames:
        - gitcentos.mvista.com
      - ip: 10.40.5.50
        hostnames:
        - centos7mirror.mvista.com
      - ip: 10.40.4.102
        hostnames:
        - centos7collective.mvista.com
      containers:
        - name: koji-jenkins
          image: yufenkuo/koji-jenkins:latest
          ports:
            - name: web-interface
              containerPort: 8080
              protocol: TCP
            - name: remote-java
              containerPort: 50000
              protocol: TCP

          volumeMounts:
          - mountPath: /var/jenkins_home
            name: jenkins-home
      volumes:
      - name: jenkins-home
        hostPath:
           path: /jenkins
           type: Directory
      restartPolicy: Always
