05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: koji
  name: koji-db-service
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    app: koji
