06-kojihub-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: koji
  name: kojihub-service
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
  - name: "443"
    port: 443
    protocol: TCP
  selector:
    app: koji
