jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: koji
  name: jenkins-service
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
  - name: "50000"
    port: 50000
    protocol: TCP
  selector:
    app: koji
