13-nginx-jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    app: koji
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jenkins.localhost
    http:
      paths:
      - backend:
          serviceName: jenkins-service
          servicePort: 8080
